code-generator/myCompilerParser.java
// $ANTLR 3.5.2 myCompiler.g 2018-06-23 17:44:44

    // import packages here.
    import java.util.HashMap;

    // final edition here 
    import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class myCompilerParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ASSIGN", "BREAK", "CASE", 
		"CHAR", "COLON", "COMMA", "COMMENT1", "COMMENT2", "CONTINUE", "DIGIT", 
		"DIVIDE", "DIVIDEEQ", "DOT_", "DOUBLE", "ELSE", "ELSEIF", "EQ", "EscapeSequence", 
		"FLOAT", "FLOAT_NUM1", "FLOAT_NUM2", "FLOAT_NUM3", "FOR", "Floating_point_constant", 
		"GT", "GTEQ", "IF", "INCLUDE", "INT", "Identifier", "Integer_constant", 
		"LBRACE", "LETTER", "LGAND", "LGOR", "LONGLONG", "LPAREN", "LSHIFT", "LSQUARE", 
		"LT", "LTEQ", "MINUS", "MINUSEQ", "MM", "MOD", "MODEQ", "NEQ", "NGT", 
		"NLT", "NOT", "OR", "PLUS", "PLUSEQ", "PP", "PREPROCESSOR", "PRINT", "RBRACE", 
		"RETURN", "RPAREN", "RSHIFT", "RSQUARE", "SCANF", "SEMI", "SHARP", "SHORT", 
		"STRING_LITERAL", "STRUCT", "SWITCH", "TIME", "TIMEEQ", "VOID", "WHILE", 
		"WS"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int ASSIGN=5;
	public static final int BREAK=6;
	public static final int CASE=7;
	public static final int CHAR=8;
	public static final int COLON=9;
	public static final int COMMA=10;
	public static final int COMMENT1=11;
	public static final int COMMENT2=12;
	public static final int CONTINUE=13;
	public static final int DIGIT=14;
	public static final int DIVIDE=15;
	public static final int DIVIDEEQ=16;
	public static final int DOT_=17;
	public static final int DOUBLE=18;
	public static final int ELSE=19;
	public static final int ELSEIF=20;
	public static final int EQ=21;
	public static final int EscapeSequence=22;
	public static final int FLOAT=23;
	public static final int FLOAT_NUM1=24;
	public static final int FLOAT_NUM2=25;
	public static final int FLOAT_NUM3=26;
	public static final int FOR=27;
	public static final int Floating_point_constant=28;
	public static final int GT=29;
	public static final int GTEQ=30;
	public static final int IF=31;
	public static final int INCLUDE=32;
	public static final int INT=33;
	public static final int Identifier=34;
	public static final int Integer_constant=35;
	public static final int LBRACE=36;
	public static final int LETTER=37;
	public static final int LGAND=38;
	public static final int LGOR=39;
	public static final int LONGLONG=40;
	public static final int LPAREN=41;
	public static final int LSHIFT=42;
	public static final int LSQUARE=43;
	public static final int LT=44;
	public static final int LTEQ=45;
	public static final int MINUS=46;
	public static final int MINUSEQ=47;
	public static final int MM=48;
	public static final int MOD=49;
	public static final int MODEQ=50;
	public static final int NEQ=51;
	public static final int NGT=52;
	public static final int NLT=53;
	public static final int NOT=54;
	public static final int OR=55;
	public static final int PLUS=56;
	public static final int PLUSEQ=57;
	public static final int PP=58;
	public static final int PREPROCESSOR=59;
	public static final int PRINT=60;
	public static final int RBRACE=61;
	public static final int RETURN=62;
	public static final int RPAREN=63;
	public static final int RSHIFT=64;
	public static final int RSQUARE=65;
	public static final int SCANF=66;
	public static final int SEMI=67;
	public static final int SHARP=68;
	public static final int SHORT=69;
	public static final int STRING_LITERAL=70;
	public static final int STRUCT=71;
	public static final int SWITCH=72;
	public static final int TIME=73;
	public static final int TIMEEQ=74;
	public static final int VOID=75;
	public static final int WHILE=76;
	public static final int WS=77;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public myCompilerParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public myCompilerParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return myCompilerParser.tokenNames; }
	@Override public String getGrammarFileName() { return "myCompiler.g"; }


	    boolean TRACEON = false;
	    HashMap<String,Integer> symtab = new HashMap<String,Integer>();

	      int attr_type;
	      /*attr_type:
	        1 => integer,
	        2 => float,
	        3 => char,
	        4 => void,
	        5 => short,
	        6 => longlong,
	        7 => double,
	        8 => struct,
	        -1 => doesn't exist,
	        -2 => error detected
	      */


	    // final edition here 以下參考自 sample code
	    HashMap<Integer,String> regMap = new HashMap<Integer,String>(); //

	    int labelCount = 0;

	    List<String> DataCode = new ArrayList<String>();
	    List<String> TextCode = new ArrayList<String>();
	 
	    public static register reg = new register(0, 9);
	    
	    /*
	     * Output prologue.
	     */
	    void prologue(String id)
	    {
	       TextCode.add("\n\n/* Text section */");
	       TextCode.add("\t.section .text");
	       TextCode.add("\t.global " + id);
	       TextCode.add("\t.type " + id + ",@function");
	       TextCode.add(id + ":");
	       
	       /* Follow x86 calling convention */
	       TextCode.add("\t pushq %rbp");
	       TextCode.add("\t movq %rsp,%rbp");
	       TextCode.add("\t pushq %rbx"); //callee saved registers.
	       TextCode.add("\t pushq %r12"); //callee saved registers.
	       TextCode.add("\t pushq %r13"); //callee saved registers.
	       TextCode.add("\t pushq %r14"); //callee saved registers.
	       TextCode.add("\t pushq %r15"); //callee saved registers.
	       TextCode.add("\t subq $8,%rsp\n"); // aligned 16-byte boundary.
	    }
	    
	    /*
	     * Output epilogue.
	     */
	    void epilogue()
	    {
	       /* handle epilogue */
	       
	       /* Follow x86 calling convention */
	       TextCode.add("\n\t addq $8,%rsp");
	       TextCode.add("\t popq %r15");
	       TextCode.add("\t popq %r14");
	       TextCode.add("\t popq %r13");
	       TextCode.add("\t popq %r12");
	       TextCode.add("\t popq %rbx");
	       TextCode.add("\t popq %rbp");
	       TextCode.add("\t ret");
	    }
	    
	    
	    /* Generate a new label */
	    String newLabel()
	    {
	       labelCount ++;
	       return (new String("L")) + Integer.toString(labelCount);
	    } 
	    
	    
	    public List<String> getDataCode()
	    {
	       return DataCode;
	    }
	    
	    public List<String> getTextCode()
	    {
	       return TextCode;
	    }
	    // 用來初始化 register 與 自訂 integer 之間的 mapping 關係
	    void initRegMappings()
	    {
	        regMap.put(0,"r14d");
	        regMap.put(1,"ebx");
	        regMap.put(2,"ecx");
	        regMap.put(3,"r15d");
	        regMap.put(4,"r8d");
	        regMap.put(5,"r9d");
	        regMap.put(6,"r10d");
	        regMap.put(7,"r11d");
	        regMap.put(8,"r12d");
	        regMap.put(9,"r13d");
	    }



	// $ANTLR start "program"
	// myCompiler.g:123:1: program : declarations functions ;
	public final void program() throws RecognitionException {
		int program_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return; }

			// myCompiler.g:124:5: ( declarations functions )
			// myCompiler.g:126:9: declarations functions
			{
			initRegMappings();
			pushFollow(FOLLOW_declarations_in_program91);
			declarations();
			state._fsp--;

			pushFollow(FOLLOW_functions_in_program93);
			functions();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "functions"
	// myCompiler.g:131:1: functions : ( function functions |);
	public final void functions() throws RecognitionException {
		int functions_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return; }

			// myCompiler.g:132:5: ( function functions |)
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==CHAR||LA1_0==DOUBLE||LA1_0==FLOAT||LA1_0==INT||LA1_0==LONGLONG||LA1_0==SHORT||LA1_0==STRUCT||LA1_0==VOID) ) {
				alt1=1;
			}
			else if ( (LA1_0==EOF) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// myCompiler.g:133:9: function functions
					{
					pushFollow(FOLLOW_function_in_functions120);
					function();
					state._fsp--;

					pushFollow(FOLLOW_functions_in_functions122);
					functions();
					state._fsp--;

					}
					break;
				case 2 :
					// myCompiler.g:135:5: 
					{
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "functions"



	// $ANTLR start "function"
	// myCompiler.g:137:1: function : type Identifier LPAREN RPAREN LBRACE l_declarations statements RBRACE ;
	public final void function() throws RecognitionException {
		int function_StartIndex = input.index();

		Token Identifier1=null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return; }

			// myCompiler.g:138:5: ( type Identifier LPAREN RPAREN LBRACE l_declarations statements RBRACE )
			// myCompiler.g:138:7: type Identifier LPAREN RPAREN LBRACE l_declarations statements RBRACE
			{
			pushFollow(FOLLOW_type_in_function155);
			type();
			state._fsp--;

			Identifier1=(Token)match(input,Identifier,FOLLOW_Identifier_in_function157); 
			match(input,LPAREN,FOLLOW_LPAREN_in_function159); 
			match(input,RPAREN,FOLLOW_RPAREN_in_function161); 
			match(input,LBRACE,FOLLOW_LBRACE_in_function163); 

			         /* output function prologue */
			         prologue((Identifier1!=null?Identifier1.getText():null));
			      
			pushFollow(FOLLOW_l_declarations_in_function179);
			l_declarations();
			state._fsp--;

			pushFollow(FOLLOW_statements_in_function181);
			statements();
			state._fsp--;

			match(input,RBRACE,FOLLOW_RBRACE_in_function183); 

			        if (TRACEON)
			        {
			            System.out.println("type Identifier () {declarations statements}");
			        }
			        /* output function epilogue */	  
			        epilogue();
				  
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "function"



	// $ANTLR start "declarations"
	// myCompiler.g:156:1: declarations : ( type Identifier SEMI declarations |);
	public final void declarations() throws RecognitionException {
		int declarations_StartIndex = input.index();

		Token Identifier2=null;
		int type3 =0;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return; }

			// myCompiler.g:157:5: ( type Identifier SEMI declarations |)
			int alt2=2;
			switch ( input.LA(1) ) {
			case INT:
				{
				int LA2_1 = input.LA(2);
				if ( (LA2_1==Identifier) ) {
					int LA2_10 = input.LA(3);
					if ( (LA2_10==SEMI) ) {
						alt2=1;
					}
					else if ( (LA2_10==LPAREN) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 10, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case FLOAT:
				{
				int LA2_2 = input.LA(2);
				if ( (LA2_2==Identifier) ) {
					int LA2_11 = input.LA(3);
					if ( (LA2_11==SEMI) ) {
						alt2=1;
					}
					else if ( (LA2_11==LPAREN) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 11, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case CHAR:
				{
				int LA2_3 = input.LA(2);
				if ( (LA2_3==Identifier) ) {
					int LA2_12 = input.LA(3);
					if ( (LA2_12==SEMI) ) {
						alt2=1;
					}
					else if ( (LA2_12==LPAREN) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 12, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case VOID:
				{
				int LA2_4 = input.LA(2);
				if ( (LA2_4==Identifier) ) {
					int LA2_13 = input.LA(3);
					if ( (LA2_13==SEMI) ) {
						alt2=1;
					}
					else if ( (LA2_13==LPAREN) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 13, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 4, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case SHORT:
				{
				int LA2_5 = input.LA(2);
				if ( (LA2_5==Identifier) ) {
					int LA2_14 = input.LA(3);
					if ( (LA2_14==SEMI) ) {
						alt2=1;
					}
					else if ( (LA2_14==LPAREN) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 14, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 5, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case LONGLONG:
				{
				int LA2_6 = input.LA(2);
				if ( (LA2_6==Identifier) ) {
					int LA2_15 = input.LA(3);
					if ( (LA2_15==SEMI) ) {
						alt2=1;
					}
					else if ( (LA2_15==LPAREN) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 15, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 6, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case DOUBLE:
				{
				int LA2_7 = input.LA(2);
				if ( (LA2_7==Identifier) ) {
					int LA2_16 = input.LA(3);
					if ( (LA2_16==SEMI) ) {
						alt2=1;
					}
					else if ( (LA2_16==LPAREN) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 16, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 7, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case STRUCT:
				{
				int LA2_8 = input.LA(2);
				if ( (LA2_8==Identifier) ) {
					int LA2_17 = input.LA(3);
					if ( (LA2_17==SEMI) ) {
						alt2=1;
					}
					else if ( (LA2_17==LPAREN) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 17, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 8, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case EOF:
				{
				alt2=2;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// myCompiler.g:158:9: type Identifier SEMI declarations
					{
					pushFollow(FOLLOW_type_in_declarations217);
					type3=type();
					state._fsp--;

					Identifier2=(Token)match(input,Identifier,FOLLOW_Identifier_in_declarations219); 
					match(input,SEMI,FOLLOW_SEMI_in_declarations221); 
					pushFollow(FOLLOW_declarations_in_declarations223);
					declarations();
					state._fsp--;
